recursion.cons.lessons.recursion.cons.Min.scala.error
min:9: error: type mismatch;
 found   : List[Int]
 required: Int
	return lambda(l,l)
                        ^